tuxtype (1.8.1-6) UNRELEASED; urgency=low

  * Bump standards version to 3.9.4.

 -- Holger Levsen <holger@debian.org>  Tue, 28 May 2013 20:47:48 +0200

tuxtype (1.8.1-5) unstable; urgency=low

  * debian/control:
    - update Vcs-Headers as tuxtype is now maintained in git. 
    - bump standards version to 3.9.2, no changes needed. 
    - depend on either fonts-sil-andika or ttf-sil-andika (Closes: #647533).
      (To ease backporting.)
  * debian/copyright: mention location of upstream GIT repository, instead of
    svn.

 -- Holger Levsen <holger@debian.org>  Thu, 22 Dec 2011 17:10:42 +0000

tuxtype (1.8.1-4) unstable; urgency=low

  * debian/menu: move to section Applications/Education. (Closes: #585964) 

 -- Holger Levsen <holger@debian.org>  Mon, 21 Jun 2010 21:27:29 +0200

tuxtype (1.8.1-3) unstable; urgency=high

  * Add etc/tuxtype to tuxtype.dirs and add --sysconfdir=/etc to configure in 
    debian/rules. (Closes: #584652)

 -- Holger Levsen <holger@debian.org>  Sat, 05 Jun 2010 10:07:22 +0000

tuxtype (1.8.1-2) unstable; urgency=low

  * Add ${misc:Depends} to depends of both binary packages.
  * Provide source/format and set it to 1.0.
  * Make debian menu use the .xpm icon. 
  * Install upstream changelog following naming convention from debian-policy. 

 -- Holger Levsen <holger@debian.org>  Thu, 20 May 2010 19:17:30 +0200

tuxtype (1.8.1-1) unstable; urgency=low

  * New upstream version, cleanup and bugfix release.
  * Bump standards version to 3.8.4, no changes needed. 
  * Deploy doc/AUTHORS and doc/ChangeLog instead of their empty pointers from
    the top level directory. (Closes: #570991)
  * Deploy SVG icon instead of PNG one. (Closes: #532770)

 -- Holger Levsen <holger@debian.org>  Wed, 12 May 2010 17:50:07 +0200

tuxtype (1.8.0-1) unstable; urgency=low

  * New upstream release, quoting from the upstream changelog:
    - new music files and backgrounds contributed by Caroline Ford,