@@ -1,102 +1,19 @@
-#!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
+#! /usr/bin/make -f
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
-# These are used for cross-compiling and for saving the configure script
-# from having to guess our platform (since we know it already)
-DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+%:
+	dh $@
 
+override_dh_auto_configure:
+	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info --bindir=\$${prefix}/games  --localstatedir=/var/games --sysconfdir=/etc
 
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
-config.status: 
-	dh_testdir
-	# Add here commands to configure the package.
-	CFLAGS="$(CFLAGS)" ./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info --bindir=\$${prefix}/games  --localstatedir=/var/games --sysconfdir=/etc
-
-
-
-build: build-arch build-indep
-
-
-build-arch: build-arch-stamp
-
-build-arch-stamp:  config.status
-	dh_testdir
-	# Add here commands to compile the package.
-	$(MAKE)
-	touch build-arch-stamp
-
-build-indep: build-indep-stamp
-build-indep-stamp:  config.status
-	touch build-indep-stamp
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-arch-stamp build-indep-stamp install-stamp
-	[ ! -f Makefile ] || $(MAKE) distclean
-	dh_clean 
-
-
-install:
-	dh_testdir
-	dh_testroot
-	dh_clean -k 
-	dh_installdirs 
-	# Add here commands to install the package into debian/tuxtype.
-	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
-	dh_installdirs -ptuxtype-data  usr/share/
-	dh_installdirs
-	cp $(CURDIR)/debian/tuxtype.xpm $(CURDIR)/debian/tuxtype/usr/share/pixmaps/
-	cp $(CURDIR)/debian/tuxtype.svg $(CURDIR)/debian/tuxtype/usr/share/pixmaps/
-	cp $(CURDIR)/tuxtype.desktop \
-		$(CURDIR)/debian/tuxtype/usr/share/applications/tuxtype.desktop
+override_dh_install:
 	rm $(CURDIR)/debian/tmp/usr/share/tuxtype/fonts -Rf
-	touch install-stamp
+	dh_install
 
-install-arch: install
-install-indep: install
-	
-binary-common:
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs doc/ChangeLog
+override_dh_installdocs:
 	dh_installdocs
-	dh_installmenu
-	dh_installman
-	dh_install --sourcedir=debian/tmp
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-# Build architecture-independent files here.
-binary-indep: build-indep install-indep
-	$(MAKE) -f debian/rules DH_OPTIONS=-i binary-common
-
-# Build architecture-dependent files here.
-binary-arch: build-arch install-arch
-	$(MAKE) -f debian/rules DH_OPTIONS=-a binary-common
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install tuxtype-data
+	# I'm not sure I really agree with Debian Policy Manual section 12.7 ...
+	mv debian/tuxtype/usr/share/doc/tuxtype/ChangeLog debian/tuxtype/usr/share/doc/tuxtype/changelog
