@@ -1,2 +1,2 @@
-/usr/share/tuxtype/
-/usr/share/locale/
+debian/tmp/usr/share/tuxtype	/usr/share/
+debian/tmp/usr/share/locale	/usr/share/
