@@ -1,2 +1,3 @@
 README
 doc/AUTHORS
+ChangeLog
