@@ -1,1 +1,4 @@
-usr/games
+debian/tmp/usr/games	/usr/
+debian/tuxtype.xpm 	/usr/share/pixmaps/
+debian/tuxtype.svg 	/usr/share/pixmaps/
+tuxtype.desktop    	/usr/share/applications/
